--- a/_posts/2016-10-02-Post-Title-3.md
+++ b/_posts/2016-10-02-Post-Title-3.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: Final Exam.2
+title: Final Exam.1
 ---
 
 
@@ -10,6 +10,7 @@ C++ :
 -**Question 1**: length of string 
 
 -**Correct Solution**:
+{
 
 int string_len(char* str){
 
@@ -24,12 +25,22 @@ int string_len(char* str){
     return i ; 
 
 }
-
+}
 -**Question tip**: 
 
 -**Question 2**:copying a string in a buf
 
 -**Correct Solution**:
+
+char* str_cpy(char* str,char*  str_copy)
+{   int i = 0 ;
+    while(str[i] != 0 )
+        str_copy[i] = str[i] ;
+    str_copy[i] = str[i] ;
+
+    return str_copy ; 
+
+}
 
 -**Question tip**:
 
@@ -38,71 +49,150 @@ int string_len(char* str){
 
 -**Correct Solution**:
 
+
+int char_count(char * str , char a){
+    int i =0 ;
+    int  s =0 ;  
+    while (str[i] != 0 )
+        if (str[i] == a )
+            s++ ;
+         
+
+    return s ;
+
+}
+
+
 -**Question tip**:
 
 
--**Question 4**:
+-**Question 4**: counting longest sequence of a character
 
 -**Correct Solution**:
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 5**: counting a pattern of characorts in a stirng
 
 -**Correct Solution**:
+
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 6**:applying a function
 
 -**Correct Solution**:
+
+
+
+typedef int (*_ii2i_fp)(int ,int );
+int * apply (int len , int * l1 , int* l2 , _ii2i_fp def,int*ans )
+{
+    for (int i =0 ; i< len ; i++)
+    {
+        ans [i]= def (l1[i] , l2[i]);
+    }
+    return ans ; 
+}
+
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 7**:changing a struct
 
 -**Correct Solution**:
+
+
+
+
+typedef struct student
+{
+    char id[9];
+    char name[30];
+
+}student ;
+
+
+void change_student_id (student* stu ,char * new_id )
+{
+    str_cpy(new_id , stu -> id );
+}
+
+void change_student_name(student* stu , char*  new_name )
+{
+    str_cpy(new_name , stu ->name  );
+}
+
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 8**: converting a struct to string
 
 -**Correct Solution**:
+
+
+char * student_tostring(student* s )
+{
+    char* buf = ( char * )malloc (40 * sizeof(char ));
+    char* buf1 = buf   ;
+    str_cpy(s->id , buf );
+    buf += string_len(s->name);
+    *buf += '\0' ; 
+    return buf1 ;
+}
+
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 9**:creating a struct
 
 -**Correct Solution**:
+
+
+student * create_student(char  id2[9] , char name2[30])
+{
+    student* stud = (student*)malloc(sizeof(student));
+    str_cpy(name2 , stud->name);
+    str_cpy(id2 , stud-> id );
+    return stud ; 
+}
+
+
 
 -**Question tip**:
 
 
--**Question**:
+-**Question 10**:memory
 
 -**Correct Solution**:
 
--**Question tip**:
+
+char*  get_std_ptr1(student *  ps)
+
+{
+    char * new_ptr = ((char*)ps )+ 5 ;
+
+return new_ptr ;
+
+}
+
+char* get_std_ptr2(student* ps )
+{
+    char* new_ptr = ((char* )ps)+ 12;
+    return new_ptr ; 
+}
 
 
--**Question**:
-
--**Correct Solution**:
-
--**Question tip**:
 
 
--**Question**:
-
--**Correct Solution**:
-
+ 
 -**Question tip**:
 
 
 ---
-**Test**: This is atest
+
