--- a/_posts/2016-10-02-Post-Title-3.md
+++ b/_posts/2016-10-02-Post-Title-3.md
@@ -33,14 +33,19 @@ int string_len(char* str){
 -**Correct Solution**:
 
 char* str_cpy(char* str,char*  str_copy)
+
 {   int i = 0 ;
+
     while(str[i] != 0 )
+
         str_copy[i] = str[i] ;
+
     str_copy[i] = str[i] ;
 
     return str_copy ; 
 
 }
+
 
 -**Question tip**:
 
@@ -50,17 +55,26 @@ char* str_cpy(char* str,char*  str_copy)
 -**Correct Solution**:
 
 
-int char_count(char * str , char a){
+
+int char_count(char * str , char a)
+{
+
     int i =0 ;
+
     int  s =0 ;  
+
     while (str[i] != 0 )
+
         if (str[i] == a )
+
             s++ ;
          
 
     return s ;
 
+
 }
+
 
 
 -**Question tip**:
@@ -88,13 +102,21 @@ int char_count(char * str , char a){
 
 
 typedef int (*_ii2i_fp)(int ,int );
+
 int * apply (int len , int * l1 , int* l2 , _ii2i_fp def,int*ans )
+
 {
+
     for (int i =0 ; i< len ; i++)
+
     {
+
         ans [i]= def (l1[i] , l2[i]);
+
     }
+
     return ans ; 
+
 }
 
 
@@ -108,22 +130,35 @@ int * apply (int len , int * l1 , int* l2 , _ii2i_fp def,int*ans )
 
 
 
+
 typedef struct student
+
 {
+
     char id[9];
+
     char name[30];
+
 
 }student ;
 
 
+
 void change_student_id (student* stu ,char * new_id )
+
 {
+
     str_cpy(new_id , stu -> id );
+
 }
 
+
 void change_student_name(student* stu , char*  new_name )
+
 {
+
     str_cpy(new_name , stu ->name  );
+
 }
 
 
@@ -135,14 +170,23 @@ void change_student_name(student* stu , char*  new_name )
 -**Correct Solution**:
 
 
+
 char * student_tostring(student* s )
+
 {
+
     char* buf = ( char * )malloc (40 * sizeof(char ));
+
     char* buf1 = buf   ;
+
     str_cpy(s->id , buf );
+
     buf += string_len(s->name);
+
     *buf += '\0' ; 
+
     return buf1 ;
+
 }
 
 
@@ -154,12 +198,19 @@ char * student_tostring(student* s )
 -**Correct Solution**:
 
 
+
 student * create_student(char  id2[9] , char name2[30])
+
 {
+
     student* stud = (student*)malloc(sizeof(student));
+
     str_cpy(name2 , stud->name);
+
     str_cpy(id2 , stud-> id );
+
     return stud ; 
+
 }
 
 
@@ -172,20 +223,32 @@ student * create_student(char  id2[9] , char name2[30])
 -**Correct Solution**:
 
 
+
 char*  get_std_ptr1(student *  ps)
 
+
+
 {
+
     char * new_ptr = ((char*)ps )+ 5 ;
+
 
 return new_ptr ;
 
 }
 
+
+
 char* get_std_ptr2(student* ps )
+
 {
+
     char* new_ptr = ((char* )ps)+ 12;
+
     return new_ptr ; 
+
 }
+
 
 
 
