--- a/_posts/2016-10-02-Post-Title-3.md
+++ b/_posts/2016-10-02-Post-Title-3.md
@@ -27,13 +27,13 @@ int string_len(char* str){
 }
 
 
--**Question tip**: 
+-**Question tip**: - 
 
 -**Question 2**:copying a string in a buf
 
 -**Correct Solution**:
 
-char* str_cpy(char* str,char*  str_copy)
+char str_cpy(char* str,char  str_copy[20])
 
 {   int i = 0 ;
 
@@ -43,12 +43,12 @@ char* str_cpy(char* str,char*  str_copy)
 
     str_copy[i] = str[i] ;
 
-    return str_copy ; 
+    return str_copy[20] ; 
 
 }
 
 
--**Question tip**:
+-**Question tip**:     ِ یک حافظه تخصیص یافته است و جمله اخر نیز باید در ان نیز قرار گیرد    str_copy توجه به ابن نکته که str_copy[i] = str[i] 
 
 
 -**Question 3**:counting a character in a string 
@@ -78,7 +78,7 @@ int char_count(char * str , char a)
 
 
 
--**Question tip**:
+-**Question tip**:  -
 
 
 -**Question 4**: counting longest sequence of a character
@@ -121,7 +121,7 @@ int * apply (int len , int * l1 , int* l2 , _ii2i_fp def,int*ans )
 }
 
 
--**Question tip**:
+-**Question tip**: نحوه استفاده از یک تابع تعریف شده 
 
 
 -**Question 7**:changing a struct
@@ -163,7 +163,7 @@ void change_student_name(student* stu , char*  new_name )
 }
 
 
--**Question tip**:
+-**Question tip**:  توجه به تغییر رشته های حرفی داخل استراکت به صورت جمله به جمله و استفاده از تابع str_cpyدر این سوال  
 
 
 -**Question 8**: converting a struct to string
@@ -191,8 +191,7 @@ char * student_tostring(student* s )
 }
 
 
--**Question tip**:
-
+-**Question tip**:در نظر گرفتن یک حافظه مشخص و برابر با استراکت با دستور malloc 
 
 -**Question 9**:creating a struct
 
@@ -216,7 +215,7 @@ student * create_student(char  id2[9] , char name2[30])
 
 
 
--**Question tip**:
+-**Question tip**:چگونگی تعریف رشته های حرفی داخل استراکت بدون تعریف جداگانه و مقدار دهی مستقیم 
 
 
 -**Question 10**:memory
@@ -252,10 +251,8 @@ char* get_std_ptr2(student* ps )
 
 
 
-
-
  
--**Question tip**:
+-**Question tip**:توانایی استفاده از دستور -exec x/32bx <address>
 
 
 ---
