--- a/_posts/2016-10-02-Post-Title-3.md
+++ b/_posts/2016-10-02-Post-Title-3.md
@@ -85,6 +85,44 @@ int char_count(char * str , char a)
 
 -**Correct Solution**:
 
+int longest_char_sequence(char a[], char b)
+
+{
+
+    int max =0 ;
+
+    int n = string_len(a);
+
+    int i =0 ;
+
+    while (i< n )
+
+    {
+
+            if (a[i]==b)
+            {
+                int k =0 ;
+                while(a[i]==b)
+                {
+                    i+=1 ;
+                    k+=1;
+
+
+                }
+
+                if (k>max)
+                    max = k ;
+                i-=1 ;
+
+            }
+            i+=1 ;
+
+    }
+    return max ;
+
+}
+
+
 -**Question tip**:
 
 
